@@ -1,3 +1,13 @@
+2011-09-12  Geoffrey Garen  <ggaren@apple.com>
+
+        Re-enabled ENABLE(LAZY_BLOCK_FREEING).
+        
+        Reviewed by Stephanie Lewis.
+
+        I accidentally disabled this in r94890, causing a big performance regression.
+
+        * wtf/Platform.h:
+
 2011-09-12  Michael Saboff  <msaboff@apple.com>
 
         Broken Build for ARM - lshift32() needs TrustedImm32 arg
